1.添加医学影响分割项目Neuronal_Structural_Segment 2.完成手术汉字识别的训练与预测，添加input用于测试 3.优化肺炎识别的框架，分为训练、验证与预测 4.删除手写汉字识别中的日志模块

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /.idea
 /Handwritten_Chinese_Character_Recognition/dataset
+/Handwritten_Chinese_Character_Recognition/checkpoint
+/Pneumonia_Diagnosis/dataset
+/Pneumonia_Diagnosis/checkpoint
+/Neuronal_Structural_Segmentation/dataset
+/Neuronal_Structural_Segmentation/checkpoint
