--- a/Handwritten_Chinese_Character_Recognition/config.json
+++ b/Handwritten_Chinese_Character_Recognition/config.json
@@ -18,6 +18,6 @@
     },
     "model": {
         "checkpoint_dir": "./checkpoint/",
-        "mode": "inference"
+        "mode": "train"
     }
 }
